--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^0.4.3+1
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
+  flutter_progress_hud: ^1.0.2
 
 dev_dependencies:
   flutter_test:
