--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
   flutter_progress_hud: ^1.0.2
+  animated_text_kit: ^1.3.1
 
 dev_dependencies:
   flutter_test:
