--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cloud_firestore: ^0.13.0+1
   flutter_progress_hud: ^1.0.2
   animated_text_kit: ^1.3.1
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
